# evaluate-models

./: .gitignore  README.md  config.py  eval.sh  eval.slurm  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/: __init__.py  config.py  eval.py  eval_rwkv.py  eval_utils.py  eval_z408.py  evaluate_rwkv.py  export_tokenizer.py  generate_1000_buckets.py  model.py  smer.py  visualize_eval.py  visualize_loss.py  visualize_smer.py
src/classes/: base_cipher_evaluator.py  config.py  mamba_config.py  native_cipher_evaluator.py  vllm_cipher_evaluator.py
src/models/: mamba_mapping.py
src/results_accum/: accum_results.py  table_generator.py
test/: conftest.py  test_config.py  test_eval.py  test_eval_utils.py  test_smer.py  test_visualize_eval.py  test_visualize_loss.py  test_visualize_smer.py
